<resources>

    <string name="app_name">Wallpaper</string>
    <string name="home">Home</string>
    <string name="no_data_available">No Data Found</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry!</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>


</resources>